--- a/package.json
+++ b/package.json
@@ -25,7 +25,11 @@
     "webpack-dev-server": "^3.9.0"
   },
   "dependencies": {
+    "@material-ui/core": "^4.10.0",
+    "@material-ui/lab": "^4.0.0-alpha.54",
+    "axios": "^0.19.2",
     "bootstrap": "^4.3.1",
+    "cors": "^2.8.5",
     "css-loader": "^3.2.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
@@ -36,6 +40,8 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "sass-loader": "^8.0.0",
     "sequelize": "^5.21.10",
     "style-loader": "^1.0.0"
