--- a/package.json
+++ b/package.json
@@ -26,11 +26,14 @@
   },
   "dependencies": {
     "@material-ui/core": "^4.10.0",
+    "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.54",
     "axios": "^0.19.2",
+    "body-parser": "^1.19.0",
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "css-loader": "^3.2.0",
+    "exceljs": "^3.9.0",
     "express": "^4.17.1",
     "multer": "^1.4.2",
     "node-sass": "^4.13.0",
@@ -38,6 +41,7 @@
     "pg": "^8.2.1",
     "pg-hstore": "^2.3.3",
     "react": "^16.12.0",
+    "react-autobind": "^1.0.6",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-router": "^5.2.0",
