--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "css-loader": "^3.2.0",
     "exceljs": "^3.9.0",
     "express": "^4.17.1",
+    "i18next": "^19.4.5",
     "multer": "^1.4.2",
     "node-sass": "^4.13.0",
     "path": "^0.12.7",
@@ -44,6 +45,7 @@
     "react-autobind": "^1.0.6",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
+    "react-i18next": "^9.0.10",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "sass-loader": "^8.0.0",
